# rusty-backup

./: .gitignore  Cargo.toml  README.md  backup.json  backup_sample.json
src/: appconfig.rs  archive_generator.rs  backup_performer.rs  lib.rs  logger.rs  main.rs
src/uploaders/: custom.rs  github.rs  mod.rs
