[package]
name = "backup"
version = "0.1.0"
authors = ["Kevin Wu <kgqw503@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
reqwest = "0.9.9"
rayon = "1.1.0"
failure = "0.1.5"
log = "0.4"
chrono = "0.4"
mockers_derive = "0.21.0"

[dev-dependencies]
mocktopus = "0.7.0"
mockers = "0.21.0"
mockito = "0.18.0"
tempdir = "0.3.7"
