[package]
name = "backup"
version = "0.1.0"
authors = ["Kevin Wu <kgqw503@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
rayon = "1.3.1"
log = "0.4"
chrono = "0.4"
anyhow = "1.0.31"
tokio = { version = "0.2.21", features = ["process", "fs", "rt-threaded", "macros"]}
futures = "0.3.5"
crossbeam = "0.7.3"

[dev-dependencies]
mockito = "0.26.0"
tempdir = "0.3.7"
